Fix align command exclude option